--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ addons:
 env:
   - REDMINE_VER=2.6-stable
   - REDMINE_VER=3.1-stable
+  - REDMINE_VER=3.2-stable
   - REDMINE_VER=master
 
 install: "echo skip bundle install"
